// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset Basic renders correctly 1`] = `
<div>
  <fieldset
    aria-describedby="fieldset-:r0:-hint"
    class="css-12ek51e-boxStyles"
    id="fieldset-:r0:"
  >
    <legend
      class="css-a5mrla-boxStyles"
    >
      What is your name?
    </legend>
    <span
      class="css-u3w7wc-boxStyles-FieldsetHint"
      id="fieldset-:r0:-hint"
    >
      We will only use this to respond to your requests
    </span>
    <div
      class="css-lsncxx-FieldsetContent"
    >
      <div
        class="css-fnma7k-boxStyles"
      >
        <div
          class="css-2ohkpz-boxStyles-FieldContainer"
        >
          <label
            class="css-12ek51e-boxStyles"
            for="field-:r1:"
          >
            <span
              class="css-1sf8c0k-boxStyles"
            >
              First name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-mtd7ku"
            id="field-:r1:"
            type="text"
          />
          <div
            aria-hidden="true"
            class="css-1r6wwux-Field"
          />
        </div>
        <div
          class="css-2ohkpz-boxStyles-FieldContainer"
        >
          <label
            class="css-12ek51e-boxStyles"
            for="field-:r2:"
          >
            <span
              class="css-1sf8c0k-boxStyles"
            >
              Last name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-mtd7ku"
            id="field-:r2:"
            type="text"
          />
          <div
            aria-hidden="true"
            class="css-1r6wwux-Field"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Fieldset Legend as page heading renders correctly 1`] = `
<div>
  <fieldset
    aria-describedby="fieldset-:r9:-hint"
    class="css-12ek51e-boxStyles"
    id="fieldset-:r9:"
  >
    <legend>
      <h1
        class="css-1jdu126-boxStyles"
      >
        What is your name?
      </h1>
    </legend>
    <div
      class="css-1rjbrib-FieldsetHint"
      id="fieldset-:r9:-hint"
    >
      <span
        class="css-bqo8ru-boxStyles"
      >
        We will only use this to respond to your requests
      </span>
    </div>
    <div
      class="css-lsncxx-FieldsetContent"
    >
      <div
        class="css-fnma7k-boxStyles"
      >
        <div
          class="css-2ohkpz-boxStyles-FieldContainer"
        >
          <label
            class="css-12ek51e-boxStyles"
            for="field-:ra:"
          >
            <span
              class="css-1sf8c0k-boxStyles"
            >
              First name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-mtd7ku"
            id="field-:ra:"
            type="text"
          />
          <div
            aria-hidden="true"
            class="css-1r6wwux-Field"
          />
        </div>
        <div
          class="css-2ohkpz-boxStyles-FieldContainer"
        >
          <label
            class="css-12ek51e-boxStyles"
            for="field-:rb:"
          >
            <span
              class="css-1sf8c0k-boxStyles"
            >
              Last name
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="css-mtd7ku"
            id="field-:rb:"
            type="text"
          />
          <div
            aria-hidden="true"
            class="css-1r6wwux-Field"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
